fixed the article alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ width:200;
 
 #featured {
 	width: 775px;
-	margin: 20px 0px 0px 15px;
+	margin: 20px 0px 20px 15px;
 	height: 245px;
 	
 	
